完成計分的部分 (clip at 15:04)

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   --dkClr:#181818;
   --liClr: whitesmoke;
   --accClr: #0D0D35;
-
 }
 
 
@@ -47,4 +46,8 @@ main {
   /* --- */
   display: flex;
   z-index: 1;
+}
+
+.white {
+  color: var(--liClr);
 }
